x1206 Label printing for strip-tube labels
These strip tubes require one label per nonempty slot. They also
need a bunch of new fields (LP, address, work).
Also, the labels for slots in a labware are printed in reverse order,
as requested by x1251.