@@ -5,13 +5,16 @@ import org.junit.jupiter.api.Test;
 import uk.ac.sanger.sccp.stan.EntityFactory;
 import uk.ac.sanger.sccp.stan.model.*;
 import uk.ac.sanger.sccp.stan.repo.*;
+import uk.ac.sanger.sccp.stan.service.LabwareNoteService;
 import uk.ac.sanger.sccp.stan.service.LabwareService;
 import uk.ac.sanger.sccp.stan.service.label.*;
 import uk.ac.sanger.sccp.stan.service.label.LabwareLabelData.LabelContent;
+import uk.ac.sanger.sccp.stan.service.work.WorkService;
+import uk.ac.sanger.sccp.utils.UCMap;
 
 import java.io.IOException;
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.*;
 import java.util.stream.IntStream;
 
 import static java.util.stream.Collectors.toList;
@@ -31,8 +34,9 @@ public class TestLabelPrintService {
     private PrinterRepo mockPrinterRepo;
     private LabwarePrintRepo mockLabwarePrintRepo;
     private LabelTypeRepo mockLabelTypeRepo;
-
     private LabwareService mockLabwareService;
+    private LabwareNoteService mockNoteService;
+    private WorkService mockWorkService;
 
     private LabelPrintService labelPrintService;
     private User user;
@@ -48,9 +52,11 @@ public class TestLabelPrintService {
         mockLabwarePrintRepo = mock(LabwarePrintRepo.class);
         mockLabelTypeRepo = mock(LabelTypeRepo.class);
         mockLabwareService = mock(LabwareService.class);
+        mockNoteService = mock(LabwareNoteService.class);
+        mockWorkService = mock(WorkService.class);
 
         labelPrintService = spy(new LabelPrintService(mockLabwareLabelDataService, mockPrintClientFactory, mockLabwareRepo,
-                mockPrinterRepo, mockLabwarePrintRepo, mockLabelTypeRepo, mockLabwareService));
+                mockPrinterRepo, mockLabwarePrintRepo, mockLabelTypeRepo, mockLabwareService, mockNoteService, mockWorkService));
         user = EntityFactory.getUser();
         printer = EntityFactory.getPrinter();
         LabwareType lt = EntityFactory.getTubeType();
@@ -110,7 +116,7 @@ public class TestLabelPrintService {
         );
         LabelPrintRequest expectedRequest = new LabelPrintRequest(lw.getLabwareType().getLabelType(), labelData);
 
-        when(mockLabwareLabelDataService.getRowBasedLabelData(lw)).thenReturn(labelData.get(0));
+        when(mockLabwareLabelDataService.getRowBasedLabelData(lw)).thenReturn(labelData.getFirst());
         when(mockLabwareService.calculateLabelType(lw)).thenReturn(lw.getLabwareType().getLabelType());
         doNothing().when(labelPrintService).print(any(), any());
         doReturn(List.of()).when(labelPrintService).recordPrint(any(), any(), any());
@@ -139,6 +145,60 @@ public class TestLabelPrintService {
         when(mockLabwareService.calculateLabelType(labware.get(1))).thenReturn(labware.get(1).getLabwareType().getLabelType());
         assertThat(assertThrows(IllegalArgumentException.class, () -> labelPrintService.printLabware(user, printer.getName(), labware)))
                 .hasMessage("Cannot perform a print request incorporating multiple different label types.");
+    }
+
+    private List<Labware> setupStripTubes() {
+        LabelType lbl = new LabelType(50, "strip");
+        LabwareType lt = EntityFactory.makeLabwareType(3, 1, "strip tube");
+        lt.setLabelType(lbl);
+        Sample[] samples = EntityFactory.makeSamples(2);
+        Labware lw1 = EntityFactory.makeLabware(lt, samples[0], samples[1]);
+        Labware lw2 = EntityFactory.makeLabware(lt, samples[1]);
+        List<Labware> lws = List.of(lw1, lw2);
+        Map<SlotIdSampleId, Set<Work>> workMap = Map.of(new SlotIdSampleId(lw1.getFirstSlot(), samples[0]),
+                Set.of(EntityFactory.makeWork("SGP1")));
+        when(mockWorkService.loadWorksForSlotsIn(any())).thenReturn(workMap);
+        UCMap<Set<String>> lpMap = new UCMap<>(1);
+        lpMap.put(lw1.getBarcode(), Set.of("LP1"));
+        when(mockNoteService.findNoteValuesForLabware(anyCollection(), any())).thenReturn(lpMap);
+        when(mockLabwareService.calculateLabelType(any())).then(invocation -> {
+            Labware lw = invocation.getArgument(0);
+            return lw.getLabwareType().getLabelType();
+        });
+        return lws;
+    }
+
+    @Test
+    public void testPrintStripLabels() throws IOException {
+        when(mockPrinterRepo.getByName(printer.getName())).thenReturn(printer);
+        List<Labware> lws = setupStripTubes();
+        LabelType lbl = lws.getFirst().getLabwareType().getLabelType();
+        doNothing().when(labelPrintService).print(any(), any());
+        doReturn(List.of()).when(labelPrintService).recordPrint(any(), any(), any());
+
+        LabwareLabelData ld1 = new LabwareLabelData("LLD1", null, null, null, null);
+        LabwareLabelData ld2 = new LabwareLabelData("LLD2", null, null, null, null);
+        when(mockLabwareLabelDataService.getSplitLabelData(same(lws.get(0)), any(), any())).thenReturn(List.of(ld1));
+        when(mockLabwareLabelDataService.getSplitLabelData(same(lws.get(1)), any(), any())).thenReturn(List.of(ld2));
+
+        labelPrintService.printLabware(user, printer.getName(), lws);
+        LabelPrintRequest expectedRequest = new LabelPrintRequest(lbl, List.of(ld1, ld2));
+        verify(labelPrintService).print(printer, expectedRequest);
+        verify(labelPrintService).recordPrint(printer, user, lws);
+        verify(mockWorkService).loadWorksForSlotsIn(lws);
+        verify(mockNoteService).findNoteValuesForLabware(lws, "lp number");
+        verify(labelPrintService).stripLabwareLabelData(lws);
+    }
+
+    @Test
+    public void testStripLabwareLabelData() {
+        List<Labware> lws = setupStripTubes();
+        LabwareLabelData ld1 = new LabwareLabelData("LLD1", null, null, null, null);
+        LabwareLabelData ld2 = new LabwareLabelData("LLD2", null, null, null, null);
+        when(mockLabwareLabelDataService.getSplitLabelData(same(lws.get(0)), any(), any())).thenReturn(List.of(ld1));
+        when(mockLabwareLabelDataService.getSplitLabelData(same(lws.get(1)), any(), any())).thenReturn(List.of(ld2));
+        List<LabwareLabelData> lds = labelPrintService.stripLabwareLabelData(lws);
+        assertThat(lds).containsExactly(ld1, ld2);
     }
 
     @Test
